--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 # Deployment Private Key (DO NOT commit .env file!)
 PRIVATE_KEY=your_private_key_here
 
-# Base Sepolia RPC URL
+# Base Mainnet RPC URL
+BASE_MAINNET_RPC_URL=https://mainnet.base.org
+
+# Base Sepolia RPC URL (Testnet)
 BASE_SEPOLIA_RPC_URL=https://sepolia.base.org
 
 # BaseScan API Key for contract verification
